# nn

./: .clang-format  CMakeLists.txt  LICENCE  README.md
dtnn_clean/: arrayfire_serialization.hpp  arrayfire_util.hpp  blob_provider.cpp  blob_provider.hpp  cereal_archives.hpp  client.cpp  client.hpp  dtnn.hpp  endpoint.hpp  feed.hpp  hyperparameters.hpp  loss_function.hpp  network.cpp  network.hpp  optimizable_weights.hpp  optimizer.hpp  prediction_batch.cpp  prediction_batch.hpp  prediction_batch_provider.cpp  prediction_batch_provider.hpp  prediction_blob.cpp  prediction_blob.hpp  prediction_provider.hpp  prediction_result.cpp  prediction_result.hpp  propagation_stage.hpp  sample_provider.hpp  serialization.hpp  serializer.hpp  server.cpp  server.hpp  testing_result.cpp  testing_result.hpp  training_batch.cpp  training_batch.hpp  training_batch_provider.cpp  training_batch_provider.hpp  training_blob.cpp  training_blob.hpp  training_provider.hpp  (+4 more)
dtnn_clean/serialization/: arrayfire.hpp  fully_connected.hpp  logistic.hpp  optimizable_weights.hpp  sgd.hpp  squared_loss.hpp  wb.hpp
dtnn_clean/techniques/: adagrad.cpp  adagrad.hpp  adam.cpp  adam.hpp  convolutional.cpp  convolutional.hpp  dropout.cpp  dropout.hpp  fully_connected.cpp  fully_connected.hpp  leaky_relu.cpp  leaky_relu.hpp  logistic.cpp  logistic.hpp  logistic_cross_entropy.cpp  logistic_cross_entropy.hpp  max_pool.cpp  max_pool.hpp  mean_pool.cpp  mean_pool.hpp  momentum.cpp  momentum.hpp  relu.cpp  relu.hpp  rmsprop.cpp  rmsprop.hpp  sgd.cpp  sgd.hpp  softmax_cross_entropy.cpp  softmax_cross_entropy.hpp  squared_loss.cpp  squared_loss.hpp  tanh.cpp  tanh.hpp
example/: CMakeLists.txt  main.cpp  mnistSampler.hpp
example/src/: main.cpp  mnistSampler.hpp
include/nn/: data_shape.hpp  loss_function.hpp  nn.hpp  optimizable_weights.hpp  optimizer.hpp  prediction_batch.hpp  serializer.hpp  training_batch.hpp  training_batch_provider.hpp
nn/: arrayfire_serialization.hpp  arrayfire_util.hpp  cereal_archives.hpp  data_shape.hpp  hyperparameters.hpp  network.cpp  network.hpp  nn.hpp  prediction_batch.hpp  prediction_batch_provider.cpp  prediction_batch_provider.hpp  testing_result.cpp  testing_result.hpp  training_batch.cpp  training_batch_provider.cpp  training_batch_provider.hpp  util.hpp  wb.cpp  wb.hpp  weighted_stage.hpp
nn/techniques/: adagrad.cpp  adagrad.hpp  adam.cpp  adam.hpp  convolutional.cpp  convolutional.hpp  dropout.hpp  fully_connected.cpp  fully_connected.hpp  leaky_relu.cpp  leaky_relu.hpp  logistic.hpp  logistic_cross_entropy.cpp  logistic_cross_entropy.hpp  lrel.hpp  mean_pool.hpp  momentum.cpp  momentum.hpp  rel.cpp  rel.hpp  relu.cpp  relu.hpp  rmsprop.cpp  rmsprop.hpp  sgd.cpp  sgd.hpp  softmax_cross_entropy.cpp  softmax_cross_entropy.hpp  squared_loss.cpp  tanh.cpp  (+2 more)
src/: network.cpp  prediction_batch.cpp  prediction_batch_provider.cpp  prediction_result.cpp  training_batch_provider.cpp
test/: CMakeLists.txt
test/src/: adagrad.cpp  arrayfire_util.cpp  fully_connected.cpp  logistic_cross_entropy.cpp  max_pool.cpp  mean_pool.cpp  momentum.cpp  network.cpp  optimizable_weights.cpp  prediction_result.cpp  rel.cpp  softmax_cross_entropy.cpp  testing_result.cpp  util.hpp  wb.cpp
testing/: adagrad.cpp  adam.cpp  convolutional.cpp  fully_connected.cpp  leaky_relu.cpp  logistic.cpp  logistic_cross_entropy.cpp  lrel.cpp  max_pool.cpp  mean_pool.cpp  messaging.cpp  momentum.cpp  network.cpp  optimizable_weights.cpp  prediction_result.cpp  relu.cpp  rmsprop.cpp  sgd.cpp  softmax_cross_entropy.cpp  squared_loss.cpp  tanh.cpp  testing.cpp  testing_result.cpp  training_blob.cpp  util.hpp  wb.cpp
(+10 files in other folders)
